--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "html2canvas": "^1.0.0-alpha.12",
     "js-cookie": "^2.2.0",
     "nprogress": "^0.2.0",
     "swiper": "^4.2.2",
